# Trading_Bot

./: .env  .gitignore  Cargo.toml  btc_1d_data_2018_to_2025.csv  btc_4h_data_2018_to_2025.csv  dockerfile  lib.rs
src/: lib.rs  main.rs  tui_display.rs
src/account_info/: mod.rs
src/market_data/: mod.rs
src/order/: mod.rs
src/rest_api/: mod.rs
src/strategy/: mod.rs
src/streams/: mod.rs
src/webhook/: mod.rs
src/websocket/: agg_trade.rs  depth.rs  kline.rs  mod.rs  ticker.rs  user_data.rs
src/websocket_stream/: mod.rs
tests/: binance_ws_tests.rs  websocket_stream_tests.rs
websocket_stream/: mod.rs
